--- a/AppBaru/package.json
+++ b/AppBaru/package.json
@@ -25,6 +25,8 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.5",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
