--- a/AppBaru/package.json
+++ b/AppBaru/package.json
@@ -23,11 +23,13 @@
     "@angular/router": "~13.2.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
+    "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.5",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
